--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -918,24 +918,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-37-03f0fbe57be5>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-03f0fbe57be5>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if number = '':\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    neighbors_list = []\n",
     "    nearest_neighbors_list = []\n",
-    "    if number = '':\n",
-    "        number = 3\n",
+    "    #if number = '':\n",
+    "     #   number = 3\n",
     "    #create list of trips\n",
     "    for trip in trips:\n",
     "        line = distance_between_neighbors(selected_trip, trip)\n",
@@ -953,19 +944,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'nearest_neighbors' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-85ca4707fe26>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m 'trip_distance': 18.38}\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mnearest_three_neighbors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnearest_neighbors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_trip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcleaned_trips\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mnearest_three_neighbors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# [{'distance_from_selected': 0.0004569288784918792,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nearest_neighbors' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'pickup_latitude': 40.64483,\n",
+       "  'pickup_longitude': -73.781578,\n",
+       "  'trip_distance': 7.78,\n",
+       "  'distance_from_selected': 0.0004569288784918792},\n",
+       " {'pickup_latitude': 40.644657,\n",
+       "  'pickup_longitude': -73.782229,\n",
+       "  'trip_distance': 12.7,\n",
+       "  'distance_from_selected': 0.0011292165425673159},\n",
+       " {'pickup_latitude': 40.648509,\n",
+       "  'pickup_longitude': -73.783508,\n",
+       "  'trip_distance': 17.3,\n",
+       "  'distance_from_selected': 0.0042359798158141185}]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
