--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -961,10 +961,14 @@
        " {'pickup_latitude': 40.648509,\n",
        "  'pickup_longitude': -73.783508,\n",
        "  'trip_distance': 17.3,\n",
-       "  'distance_from_selected': 0.0042359798158141185}]"
+       "  'distance_from_selected': 0.0042359798158141185},\n",
+       " {'pickup_latitude': 40.645316,\n",
+       "  'pickup_longitude': -73.776808,\n",
+       "  'trip_distance': 17.5,\n",
+       "  'distance_from_selected': 0.004354220940644754}]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +978,7 @@
     "'pickup_longitude': -73.78115,\n",
     "'trip_distance': 18.38}\n",
     "\n",
-    "nearest_three_neighbors = nearest_neighbors(new_trip, cleaned_trips or [], number = 3)\n",
+    "nearest_three_neighbors = nearest_neighbors(new_trip, cleaned_trips or [], number = 4)\n",
     "nearest_three_neighbors\n",
     "# [{'distance_from_selected': 0.0004569288784918792,\n",
     "#   'pickup_latitude': 40.64483,\n",
@@ -1001,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1014,7 @@
        "12.593"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
